fix-overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
 
 * {
   margin: 0;
-  overflow-x: hidden;
   box-sizing: border-box;
 }
 
